--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-clipboard/clipboard": "^1.16.3",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-firebase/analytics": "^22.4.0",
     "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/messaging": "^22.4.0",
@@ -19,6 +21,7 @@
     "@react-navigation/drawer": "^7.5.3",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^1.10.0",
     "i18n": "^0.15.1",
     "i18next": "^25.3.2",
@@ -27,9 +30,11 @@
     "moment": "^2.30.1",
     "qs": "^6.14.0",
     "react": "19.0.0",
+    "react-hook-form": "^7.60.0",
     "react-i18next": "^15.6.0",
     "react-native": "0.79.2",
     "react-native-crypto-js": "^1.0.0",
+    "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-haptic-feedback": "^2.3.3",
