--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,7 +15,16 @@ buildscript {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+        classpath("com.google.gms:google-services:4.4.0")
+        classpath("com.google.firebase:firebase-crashlytics-gradle:3.0.2")
     }
+
+    allprojects {
+    repositories {
+        maven { url 'https://www.jitpack.io' }
+    }
+}
+
 }
 
 apply plugin: "com.facebook.react.rootproject"
