--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.4.1",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^15.12.0",
     "react-native-toast-message": "^2.3.3",
     "react-native-webview": "^13.15.0",
     "react-redux": "^9.2.0",
